Details
-
Bug
-
Status: Closed
-
Critical
-
Resolution: Fixed
-
0.9.3
-
None
Description
Coverity Scan identified 9 issues of high severity.
I dismissed 4 of them as false positives; coverity lost track of the handling of socket file descriptors across multiple layers of calls; this left 5 issues, and I took care of a number of insignificant issues as well:
1295822 - memory leak in ThreadFactoryTests
1216842 - uninitialized rfds fd_set is passed to select if mode is not WAIT_MODE_C (R+W)
1216841 - uninitialized wfds fd_set is passed to select if mode is not WAIT_MODE_C (R+W)
1216840 - getsockname is always passed uninitialized addrlen
1295810 - uninitialized variables in test
1295808 - uninitialized variable in test
1295804 - structurally dead code in processor test event log - changed to use environment variable
excuded:
1174563 - memory leak in compiler class handling functions
1174671 - uninitialized variable in FunctionRunner (intervalMs_)
1174669, 1174763, 1295806, 1295807, 1295809 - uninitialized variable in TSocket (peerPort_)
Attachments
Issue Links
- relates to
-
THRIFT-2564 misc. Lua issues reported by coverity scan
-
- Open
-
- links to