THRIFT-3943: resolve some high severity outstanding defects identified by coverity scan